<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>de.bmarwell.aktienfinder.scraper</groupId>
  <artifactId>aktienfinder-scraper</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>aktienfinder-scraper</name>
  <description>Scraper for aktienfinder.net</description>

  <inceptionYear>2024</inceptionYear>

  <licenses>
    <license>
      <name>Apache-2.0</name>
      <url>https://spdx.org/licenses/Apache-2.0.html</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <developers>
    <developer>
      <id>bmarwell</id>
      <name>Benjamin Marwell</name>
    </developer>
  </developers>

  <scm>
    <url>https://github.com/bmarwell/aktienfinder-scraper</url>
    <connection>https://github.com/bmarwell/aktienfinder-scraper.git</connection>
    <developerConnection>git@github.com:bmarwell/aktienfinder-scraper.git</developerConnection>
    <tag>HEAD</tag>
  </scm>

  <properties>
    <java.version>23</java.version>
    <maven.compiler.release>${java.version}</maven.compiler.release>
    <maven.compiler.showDeprecation>true</maven.compiler.showDeprecation>
    <maven.compiler.showWarnings>true</maven.compiler.showWarnings>
    <project.primarylicense.name>Apache-2.0</project.primarylicense.name>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <!-- app dependencies -->
    <dependency.picocli.version>4.7.6</dependency.picocli.version>

    <!-- build dependencies -->
    <dependency.cleanthat.version>2.21</dependency.cleanthat.version>
    <dependency.palantir-java-format.version>2.50.0</dependency.palantir-java-format.version>

    <!-- 3rd party plugins -->
    <plugin.jreleaser.version>1.13.1</plugin.jreleaser.version>
    <plugin.spotless.version>2.43.0</plugin.spotless.version>
  </properties>

  <modules>
    <module>library</module>
    <module>app</module>
  </modules>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>info.picocli</groupId>
        <artifactId>picocli</artifactId>
        <version>${dependency.picocli.version}</version>
      </dependency>
      <dependency>
        <groupId>org.jspecify</groupId>
        <artifactId>jspecify</artifactId>
        <version>1.0.0</version>
      </dependency>

      <dependency>
        <groupId>jakarta.json</groupId>
        <artifactId>jakarta.json-api</artifactId>
        <version>2.1.2</version>
        <scope>compile</scope>
      </dependency>
      <dependency>
        <groupId>org.apache.johnzon</groupId>
        <artifactId>johnzon-core</artifactId>
        <version>2.0.1</version>
        <scope>runtime</scope>
      </dependency>

      <dependency>
        <groupId>com.microsoft.playwright</groupId>
        <artifactId>playwright</artifactId>
        <version>1.47.0</version>
      </dependency>

      <dependency>
        <groupId>org.apache.poi</groupId>
        <artifactId>poi</artifactId>
        <version>5.3.0</version>
      </dependency>
      <dependency>
        <groupId>org.apache.poi</groupId>
        <artifactId>poi-ooxml</artifactId>
        <version>5.3.0</version>
      </dependency>

      <!-- logging -->
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-api</artifactId>
        <version>2.0.13</version>
      </dependency>
      <dependency>
        <groupId>ch.qos.logback</groupId>
        <artifactId>logback-classic</artifactId>
        <version>1.5.6</version>
        <scope>runtime</scope>
      </dependency>

      <dependency>
        <groupId>org.apache.logging.log4j</groupId>
        <artifactId>log4j-slf4j-impl</artifactId>
        <version>2.21.1</version>
        <scope>runtime</scope>
      </dependency>

      <!-- build only -->
      <dependency>
        <groupId>com.palantir.javaformat</groupId>
        <artifactId>palantir-java-format</artifactId>
        <version>${dependency.palantir-java-format.version}</version>
      </dependency>
      <dependency>
        <groupId>io.github.solven-eu.cleanthat</groupId>
        <artifactId>java</artifactId>
        <version>${dependency.cleanthat.version}</version>
      </dependency>

    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>org.jspecify</groupId>
      <artifactId>jspecify</artifactId>
    </dependency>
  </dependencies>

  <build>
    <pluginManagement>
      <plugins>
        <!-- Maven core plugins -->
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.4.0</version>
          <configuration>
            <fast>true</fast>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.13.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-dependency-plugin</artifactId>
          <version>3.7.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.4.2</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.3.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.3.1</version>
        </plugin>

        <!-- 3rd party plugins -->
        <plugin>
          <groupId>org.jreleaser</groupId>
          <artifactId>jreleaser-maven-plugin</artifactId>
          <version>${plugin.jreleaser.version}</version>
        </plugin>
        <plugin>
          <groupId>com.diffplug.spotless</groupId>
          <artifactId>spotless-maven-plugin</artifactId>
          <version>${plugin.spotless.version}</version>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <plugin>
        <groupId>com.diffplug.spotless</groupId>
        <artifactId>spotless-maven-plugin</artifactId>
        <executions>
          <execution>
            <id>default-format</id>
            <phase>process-sources</phase>
            <goals>
              <goal>apply</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <formats>
            <format>
              <includes>
                <include>*.adoc</include>
                <include>*.md</include>
                <include>*.xml</include>
                <include>.gitignore</include>
              </includes>
              <!-- define the steps to apply to those files -->
              <trimTrailingWhitespace/>
              <endWithNewline/>
              <indent>
                <tabs>false</tabs>
                <spaces>true</spaces>
                <spacesPerTab>2</spacesPerTab>
              </indent>
            </format>
          </formats>

          <java>
            <cleanthat>
              <version>${dependency.cleanthat.version}</version>
              <mutators>
                <mutator>AllIncludingDraftSingleMutators</mutator>
              </mutators>
              <excludedMutators>
                <excludedMutator>AvoidFileStream</excludedMutator>
              </excludedMutators>
            </cleanthat>

            <importOrder/>
            <removeUnusedImports/>

            <palantirJavaFormat>
              <version>${dependency.palantir-java-format.version}</version>
            </palantirJavaFormat>

            <licenseHeader>
              <content><![CDATA[
/*
 * Copyright (C) $YEAR.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
]]></content>
            </licenseHeader>
          </java>
        </configuration>
      </plugin>
    </plugins>
  </build>

</project>
